--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -1,23 +1,8 @@
-.modalOverlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
+.image {
+  max-width: 500px;
+  object-fit: cover;
 }
 
-.modalContent {
-  filter: drop-shadow(0 0 10px rgb(102, 98, 98));
-}
-
-.modalInfo {
-  color: #fff;
-  background-color: rgba(165, 190, 188, 0.288);
-  padding: 0 12px;
+.modal {
+  pointer-events: none;
 }
